@@ -6,7 +6,9 @@
   <!--
     Specification for the vc8 build
     -->
-  <project name="CUTS-vc8" requireModification="true">
+  <project name="CUTS-vc8"
+           requireModification="true"
+           buildafterfailed="false">
     <property name="build.type" value="vc8" />
 
     <listeners>
