@@ -1,3 +1,11 @@
+Mon Oct 25 01:49:30 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * integration/cruisecontrol/cuts-vc8.config.xml:
+        * integration/cruisecontrol/cuts-vc9.config.xml:
+
+          Disabled the build if the previous build failed and there are
+          no modifications detected.
+
 Mon Oct 25 01:26:43 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * integration/cruisecontrol/cuts-vc8.config.xml:
